Update EstructuraAct4.java
Correccion de errores